# prdm9_2020

./: .gitignore  CMakeLists.txt  Makefile  README.md  prdm9.cpp  simple_prdm9.cpp
Manuscript/: main.tex  pzife_biblio.bib
Scripts/R_scripts/: FitnessFunctionsEqAvFreq.R  PlotDiversityAlleleGroups.R  ZFArraySizeVsAccelEvol.R  ZnF_IncreaseDecrease_Neutral.R  alleleFreqs_InvadingMotifs_motifAct_fromRef_ACDivsty_gralStats.R  alleleFreqs_MotifID_ZnfFreqs_tau.R  alleleFreqs_WithMotif_Erosion_ZnfFreqs.R  alleleFreqs_erosion_Znf_withLabels_clean.R  alleleFreqs_motifAct_fromRef_ACDivsty_gralStats.R  alleleFreqs_motifAct_sizeArray_fromRef_withGralStats.R  alleleFreqs_motifAct_sizeArray_fromRef_withGralStats_withParentalColors.R  alleleFreqs_motifActivity_SizeOfZnfArray.R  allelePotentialityDistributions.R  allelicClassFreqActivityPotentiality.R  alpha.R  arraySizeChange_several.R  arraySizeOfNewAlleles_comparedToAverage_ZnfMutGConv.R  avArraySize_GeneralStats_severalruns.R  comparisonBetweenPzifeAndPrdm9C.R  diversityWithinZnfByPosition.R  dup-del-geneconv-point-total-effective-ratios_withHist.R  effeciveMutationEvolution.R  effectiveOverTotalMutations_perArraySize.R  effectiveVsReal_severalIndependentRuns.R  evolutionOfZnfArraySize.R  evolutionZnfArraySize_2.R  freqErosionaZnfCount_prdm9Diversity.R  freqOfMotifs.R  freqOfMotifs_prdm9Diversity.R  histogramSet_severalRuns_pdf.R  histogram_arraySize_Crange_RQDStats_gralStatistics.R  histogram_arraySize_GralStatsEffectivityOfMuts.R  masterPlot_SummaryStats_severalRuns_pzife.R  masterPlot_withArraySizeHtzDisp.R  (+35 more)
src/: prdm9.cpp
(+1 files in other folders)
